daun.me integration and remove overengineered stuff

--- a/.env.example
+++ b/.env.example
@@ -71,3 +71,8 @@ R2_BUCKET=sedekah-media
 R2_URL=https://cdn.sedekah.info
 
 VITE_APP_NAME="${APP_NAME}"
+
+# Daun.me Social Integration
+DAUN_ENABLED=false
+DAUN_API_URL=https://daun.me
+DAUN_API_KEY=
