--- a/.env.example
+++ b/.env.example
@@ -76,3 +76,6 @@ VITE_APP_NAME="${APP_NAME}"
 DAUN_ENABLED=false
 DAUN_API_URL=https://daun.me
 DAUN_API_KEY=
+DAUN_CLIENT_ID=
+DAUN_CLIENT_SECRET=
+DAUN_REDIRECT_URI=https://yourdomain.com/daun/callback
