daun.me post updates

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Sedekah.online",
+  "name": "Sedekah.info",
   "short_name": "Sedekah",
   "description": "Direktori QR kod derma institusi Islam di Malaysia",
   "start_url": "/",
